<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="10dp"
                        android:layout_marginEnd="5dp">

                        <ImageView
                            android:id="@+id/iv_news_logo"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@mipmap/ic_launcher"
                            android:layout_weight="0.2"/>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="0.4"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/tv_site"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/site"
                                android:textAlignment="textStart"
                                android:textColor="#555353"
                                android:layout_weight="0.4"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/montserrat"
                                android:layout_weight="0.6"
                                android:text="@string/date" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.4"
                            android:layout_margin="5dp">

                            <TextView
                                android:id="@+id/tv_url"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/url"
                                android:textColor="#168DC5" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/title"
                        android:textAlignment="textStart"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <TextView
                        android:id="@+id/tv_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/montserrat"
                        android:textSize="17sp"
                        android:textColor="#000000"
                        android:text="@string/some_text"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>